--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dear Nishanthy 💖</title>
+  <title>Happy Birthday Nisha 💖</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #ffe3ec, #d0f0ff);
-      color: #3d3d3d;
-      transition: background 0.6s ease, color 0.6s ease;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #ffd5ec, #c8f4ff);
+      color: #333;
       overflow-x: hidden;
     }
 
@@ -19,24 +18,35 @@
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: #fff4f9;
+      background: #fff0f7;
       color: #ff4081;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      text-align: center;
-      z-index: 1000;
+      z-index: 999;
     }
 
-    .start-screen h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
+    .animated-name {
+      font-size: 3rem;
+      display: flex;
+      gap: 15px;
     }
 
-    .start-screen p {
-      font-size: 1.2rem;
-      margin-bottom: 20px;
+    .animated-name span {
+      animation: bounce 1s ease infinite alternate;
+      display: inline-block;
+      font-weight: bold;
+    }
+
+    .animated-name span:nth-child(2) { animation-delay: 0.1s; }
+    .animated-name span:nth-child(3) { animation-delay: 0.2s; }
+    .animated-name span:nth-child(4) { animation-delay: 0.3s; }
+    .animated-name span:nth-child(5) { animation-delay: 0.4s; }
+
+    @keyframes bounce {
+      from { transform: translateY(0); }
+      to { transform: translateY(-15px); color: #e91e63; }
     }
 
     .start-screen button {
@@ -47,12 +57,7 @@
       padding: 12px 24px;
       border-radius: 30px;
       cursor: pointer;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-      transition: background 0.3s;
-    }
-
-    .start-screen button:hover {
-      background: #e91e63;
+      margin-top: 20px;
     }
 
     .container {
@@ -62,7 +67,7 @@
     }
 
     .typed-text {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       margin: 20px auto;
       white-space: pre-wrap;
       max-width: 700px;
@@ -93,28 +98,18 @@
       color: white;
       font-size: 1rem;
       cursor: pointer;
-      transition: transform 0.2s;
-    }
-
-    button:hover {
-      transform: scale(1.05);
     }
 
     .swiper {
       width: 90%;
       max-width: 600px;
-      margin: auto;
-      margin-top: 30px;
+      margin: 30px auto;
     }
 
     .swiper-slide img {
       width: 100%;
       border-radius: 15px;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-    }
-
-    .video {
-      margin-top: 30px;
     }
 
     .chat-box {
@@ -136,7 +131,7 @@
     .secret {
       margin-top: 30px;
       font-style: italic;
-      color: #888;
+      color: #666;
     }
 
     .modal {
@@ -157,17 +152,19 @@
       text-align: center;
       max-width: 600px;
       color: #333;
-      box-shadow: 0 0 20px rgba(255, 64, 129, 0.3);
     }
   </style>
 </head>
 <body>
+
   <audio id="bg-music" src="bday.mp3" loop></audio>
 
   <div class="start-screen" id="start-screen">
-    <h1>Hey Nishanthy! 🌸</h1>
-    <p>A special surprise made with love just for you.</p>
-    <button onclick="startSurprise()">Start Your Journey 💖</button>
+    <div class="animated-name">
+      <span>N</span><span>I</span><span>S</span><span>H</span><span>A</span>
+    </div>
+    <p>My sweet sister, this day is all about you 💝</p>
+    <button onclick="startSurprise()">Start Surprise 🎉</button>
   </div>
 
   <div class="container" id="main-content">
@@ -175,7 +172,7 @@
 
     <div class="buttons">
       <button id="music-toggle">🔇 Mute</button>
-      <button onclick="document.getElementById('modal').style.display='flex'">📜 Read Letter</button>
+      <button onclick="document.getElementById('modal').style.display='flex'">💌 Read Letter</button>
     </div>
 
     <div class="swiper mySwiper">
@@ -183,37 +180,36 @@
         <div class="swiper-slide"><img src="1.jpg" alt="Memory 1" /></div>
         <div class="swiper-slide"><img src="2.jpg" alt="Memory 2" /></div>
         <div class="swiper-slide"><img src="3.jpg" alt="Memory 3" /></div>
-        <div class="swiper-slide"><img src="4.jpg" alt="Memory 4" /></div>
-        <div class="swiper-slide"><img src="5.jpg" alt="Memory 5" /></div>
-
       </div>
     </div>
 
-
     <div class="chat-box">
-      <div class="chat-msg">👧 Nishanthy: This is the sweetest surprise ever!</div>
-      <div class="chat-msg">👦 You: Because you deserve every bit of joy, sis! 💕</div>
+      <div class="chat-msg">👧 Nisha: Awww... this is amazing!</div>
+      <div class="chat-msg">👦 You: Just a small surprise for my biggest blessing 💕</div>
     </div>
 
     <div class="secret">
-      <p>// To my sister: You're not just part of my life, you're the heart of it 💻❤️</p>
+      <p>// Happy Birthday to the one who adds color to every line of my life 💻💖</p>
     </div>
   </div>
 
   <div class="modal" id="modal" onclick="this.style.display='none'">
     <div class="modal-content">
-      <h2>Dear Nishanthy 💌</h2>
-      <p>You’ve been my partner in childhood, my cheerleader, and my forever friend. This page is my tiny tribute to you — a digital hug full of love and memories. 💖</p>
+      <h2>Dear Nisha 💝</h2>
+      <p>
+        From childhood giggles to grown-up talks, you’ve always been my light. <br>
+        This page is a hug in code form — built with every ounce of love. <br>
+        Here's to you, your dreams, and all the joy you bring to this world. 💐🎂
+      </p>
     </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    const message = `Hi Nishanthy! 🌼\n\nWelcome to your personal little corner on the internet.\nThis surprise is just my way of saying:\n\nYou mean the world to me, sis 💕\n\nLet this be a reminder of all the good times — and many more to come.`;
+    const message = `Hey Nisha! 🎉\n\nHappy Birthday to the kindest, sweetest sister ever!\n\nThis is your digital gift — filled with love, memories, and a sprinkle of magic 💫\nSwipe through, enjoy the music, and feel every beat of love. 💖`;
 
     const typedText = document.querySelector(".typed-text");
-    const cursor = document.querySelector(".cursor");
     const music = document.getElementById("bg-music");
     const musicToggle = document.getElementById("music-toggle");
     const startScreen = document.getElementById("start-screen");
@@ -248,15 +244,11 @@
 
     const swiper = new Swiper(".mySwiper", {
       loop: true,
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
       autoplay: {
         delay: 3000,
         disableOnInteraction: false,
       },
-      effect: 'fade',
+      effect: 'slide',
     });
   </script>
 </body>
