--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
         <div class="swiper-slide"><img src="1.jpg" alt="Memory 1" /></div>
         <div class="swiper-slide"><img src="2.jpg" alt="Memory 2" /></div>
         <div class="swiper-slide"><img src="3.jpg" alt="Memory 3" /></div>
+        <div class="swiper-slide"><img src="4.jpg" alt="Memory 4" /></div>
+        <div class="swiper-slide"><img src="5.jpg" alt="Memory 5" /></div>
+        
       </div>
     </div>
 
