--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div>
       <p id="heartClick" style="font-size: 2rem; cursor:pointer;" onclick="clickHeart()">❤️</p>
       <p style="cursor:pointer;" onclick="clickHeart()">Tap the heart above 3 times for a secret!</p>
-      <p class="hidden-secret" id="secretMsg" style="display:none;">🌟 You're not just my sister, you're my soul-twin. I love you always. 💖</p>
+      <p class="hidden-secret" id="secretMsg" style="display:none;">🌟 You're not just my sister, you're my soul-twin. 💖</p>
     </div>
   </div>
 
